--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-blog-service",
+    "start": "egg-scripts start --daemon --title=egg-server-blog-service --ignore-stderr",
     "stop": "egg-scripts stop --title=egg-server-blog-service",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
